# SmartTrafficSystem

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
ai/: detect_video.py  traffic_predictor.py  vehicle_detection.py
dashboard/: app.py  requirements.txt  utils.py
dashboard/templates/: index.html
detection/: vehicle_detection_demo.py
docs/: ARCHITECTURE.md
logs/: events_20260406_213844.csv  stats_20260406_213844.csv
models/: README.md
scripts/: benchmark.py  generate_data.py  run_headless.py
simulation/: config.py  dashboard.py  intersection.py  logger.py  main.py  ml_predictor.py  stats.py  traffic_light.py  vehicle.py
simulation/data/: run_20260406_214041.csv  summary_20260406_214041.json
tests/: test_core.py  test_extended.py  test_smart_traffic.py
