[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "smart-traffic-system"
version         = "1.0.0"
description     = "AI-powered traffic simulation with adaptive signal control and emergency vehicle preemption"
readme          = "README.md"
requires-python = ">=3.10"
license         = {text = "MIT"}

dependencies = [
    "pygame==2.5.2",
    "numpy>=1.24,<2.0",
    "scikit-learn>=1.3,<2.0",
]

[project.optional-dependencies]
detection = [
    "ultralytics>=8.0",
    "opencv-python>=4.8",
    "yt-dlp",
]
training = [
    "joblib>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.scripts]
smart-traffic = "simulation.main:main"

[tool.setuptools.packages.find]
include = ["simulation*", "ai*", "detection*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
